--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Biagio Montaruli <biagio.hkr@gmail.com>
 sentence=Allows an Arduino/Genuino board to use the builtin led and external leds.
 paragraph=Supports many methods to control leds attached to your Arduino/Genuino board
 category=Signal Input/Output
-url=https://github.com/biagiom/Led
+url=https://github.com/biagiom/Arduino-Led
 architectures=*
