--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Led
-version=1.1.1
+version=1.2.0
 author=BiagioMkr
 maintainer=Biagio Montaruli <biagio.hkr@gmail.com>
 sentence=Allows an Arduino/Genuino board to use the builtin led and external leds.
 paragraph=Supports many methods to control leds attached to your Arduino/Genuino board
 category=Signal Input/Output
-url=https://github.com/biagiom/Arduino-Led
+url=https://github.com/biagiom/Led
 architectures=*
