Update library name and related files
- Change library name to LedBlinky because the prevoius name 'Led' was
  a bit generic and to avoid name collision with other Arduino libraries
- Update documentation and sketches that use the old library name
- Change the class name from 'Led' to 'LedBlinky'
- Update the name of the source code files

Signed-off-by: Biagio Montaruli <biagio.hkr@gmail.com>

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Led
+name=LedBlinky
 version=1.2.0
 author=BiagioMkr
 maintainer=Biagio Montaruli <biagio.hkr@gmail.com>
-sentence=Allows an Arduino/Genuino board to use the builtin led and external leds.
+sentence=Allows an Arduino/Genuino board to control the builtin led and external leds.
 paragraph=Supports many methods to control leds attached to your Arduino/Genuino board
 category=Signal Input/Output
-url=https://github.com/biagiom/Led
+url=https://github.com/biagiom/LedBlinky
 architectures=*
